--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -562,10 +562,14 @@ h1.search-display {
 }
 
 #infobar {
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  flex-grow: 1;
+  -ms-flex-positive: 1;
   width: 100%;
   height: 30px;
   background: #F3EFEF;
-  position: fixed;
+  position: absolute;
   top: 0;
   z-index: 975;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
@@ -851,6 +855,13 @@ h1.search-display {
   -moz-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 #main-container {
